@@ -10,10 +10,13 @@ SETTINGS = [
     "show_files",
     "show_path",
     "default_root",
-    "default_path"
+    "default_path",
+    "os_specific_alias"
 ]
 DEBUG = False
 PLATFORM = sublime.platform()
+VIEW_NAME = "AdvancedNewFileCreation"
+WIN_ROOT_REGEX = r"[a-zA-Z]:(/|\\)"
 
 
 class AdvancedNewFileCommand(sublime_plugin.WindowCommand):
@@ -26,7 +29,7 @@ class AdvancedNewFileCommand(sublime_plugin.WindowCommand):
 
         # Settings will be based on the view
         settings = get_settings(self.view)
-        self.aliases = settings.get("alias")
+        self.aliases = self.get_aliases(settings)
         self.show_path = settings.get("show_path")
         default_root = self.get_default_root(settings.get("default_root"))
         if default_root == "path":
@@ -48,6 +51,15 @@ class AdvancedNewFileCommand(sublime_plugin.WindowCommand):
         # Get user input
         self.show_filename_input(path)
 
+    def get_aliases(self, settings):
+        aliases = settings.get("alias")
+        all_os_aliases = settings.get("os_specific_alias")
+        for key in all_os_aliases:
+            if PLATFORM.lower() in all_os_aliases.get(key):
+                aliases[key] = all_os_aliases.get(key).get(PLATFORM.lower())
+
+        return aliases
+
     def get_default_root(self, string):
         root = ""
 
@@ -64,16 +76,25 @@ class AdvancedNewFileCommand(sublime_plugin.WindowCommand):
         return root
 
     def split_path(self, path=""):
+        HOME_REGEX = r"^~[/\\]"
+        root = None
         try:
-            if self.top_level_split_char in path:
+            # Parse windows root
+            if PLATFORM == "windows":
+                if re.match(WIN_ROOT_REGEX, path):
+                    root = path[0:3]
+                    path = path[3:]
+
+            if self.top_level_split_char in path and root == None:
                 parts = path.split(self.top_level_split_char, 1)
                 root = self.translate_alias(parts[0])
                 path = parts[1]
-            elif "~/" == path[0:2] or "~\\" == path[0:2]:
+            elif re.match(HOME_REGEX, path) and root == None:
                 root = os.path.expanduser("~")
                 path = path[2:]
-            else:
+            elif root == None:
                 root = self.root or self.window.folders()[0]
+
         except IndexError:
             root = os.path.expanduser("~")
 
@@ -84,10 +105,11 @@ class AdvancedNewFileCommand(sublime_plugin.WindowCommand):
         return root, path
 
     def translate_alias(self, target):
+        RELATIVE_REGEX = r"^\.{1,2}[/\\]"
         root = None
-        if target == "" and self.view != None:
+        if target == "" and self.view is not None:
             filename = self.view.file_name()
-            if filename != None:
+            if filename is not None:
                 root = os.path.dirname(filename)
         else:
             for folder in self.window.folders():
@@ -98,8 +120,8 @@ class AdvancedNewFileCommand(sublime_plugin.WindowCommand):
             for alias in self.aliases.keys():
                 if alias == target:
                     alias_path = self.aliases.get(alias)
-                    if re.search(r"^\.{1,2}[/\\]", alias_path) != None:
-                        if self.view.file_name() != None:
+                    if re.search(RELATIVE_REGEX, alias_path) is not None:
+                        if self.view.file_name() is not None:
                             alias_root = os.path.dirname(self.view.file_name())
                         else:
                             alias_root = os.path.expanduser("~")
@@ -107,9 +129,11 @@ class AdvancedNewFileCommand(sublime_plugin.WindowCommand):
                     else:
                         root = os.path.expanduser(alias_path)
                     break
-        if root == None:
-            #root = os.path.expanduser("~")
+        if root is None:
             root = self.root
+            if PLATFORM == "windows":
+                if re.match(r"^[a-zA-Z]$", target):
+                    return os.path.abspath(root)
             print "AdvancedNewFile[Warning]: No alias found for '" + target + "'"
 
         return os.path.abspath(root)
@@ -123,7 +147,7 @@ class AdvancedNewFileCommand(sublime_plugin.WindowCommand):
             self.entered_filename, self.update_filename_input, self.clear
         )
 
-        view.set_name("AdvancedNewFileCreation")
+        view.set_name(VIEW_NAME)
         view.settings().set("tab_size", 0)
         view.settings().set("translate_tabs_to_spaces", True)
         temp = view.settings().get("word_separators")
@@ -145,12 +169,22 @@ class AdvancedNewFileCommand(sublime_plugin.WindowCommand):
             PathAutocomplete.set_root(base, True)
 
         if self.show_path:
-            self.view.set_status("AdvancedNewFile", "Creating file at %s " % \
-                os.path.abspath(os.path.join(base, path)))
+            if self.view != None:
+                self.view.set_status("AdvancedNewFile", "Creating file at %s " % \
+                    os.path.abspath(os.path.join(base, path)))
+            else:
+                sublime.status_message("Unable to fill status bar without view")
 
         PathAutocomplete.set_path(path)
 
     def entered_filename(self, filename):
+        if PLATFORM == "windows":
+            if re.match(WIN_ROOT_REGEX, filename):
+                root = filename[0:3]
+                if not os.path.isdir(root):
+                    sublime.error_message(root + " is not a valid root.")
+                    self.clear()
+                    return
         base, path = self.split_path(filename)
         file_path = os.path.join(base, path)
 
@@ -164,7 +198,8 @@ class AdvancedNewFileCommand(sublime_plugin.WindowCommand):
         self.clear()
 
     def clear(self):
-        self.view.erase_status("AdvancedNewFile")
+        if self.view != None:
+            self.view.erase_status("AdvancedNewFile")
         PathAutocomplete.clear()
 
     def create(self, filename):
@@ -209,14 +244,15 @@ class PathAutocomplete(sublime_plugin.EventListener):
     show_files = False
 
     def continue_previous_autocomplete(self):
+        pac = PathAutocomplete
         sep = os.sep
-        root_path = PathAutocomplete.root + sep
-        prev_base = PathAutocomplete.prev_base
-        prev_directory = PathAutocomplete.prev_directory
-        prev_root = PathAutocomplete.prev_root
+        root_path = pac.root + sep
+        prev_base = pac.prev_base
+        prev_directory = pac.prev_directory
+        prev_root = pac.prev_root
 
-        base = os.path.basename(PathAutocomplete.path)
-        directory = os.path.dirname(PathAutocomplete.path)
+        base = os.path.basename(pac.path)
+        directory = os.path.dirname(pac.path)
 
         # If base is empty, we may be cycling through directory options
         if base == "":
@@ -226,30 +262,31 @@ class PathAutocomplete(sublime_plugin.EventListener):
         if base == prev_base and \
         directory == prev_directory and \
         prev_root == root_path and \
-        PathAutocomplete.default_root:
+        pac.default_root:
             return True
         # Continue completions if file names are completed.
-        if os.path.isfile(os.path.join(root_path, PathAutocomplete.path)):
+        if os.path.isfile(os.path.join(root_path, pac.path)):
             return True
         return False
 
     def on_query_completions(self, view, prefix, locations):
-        if view.name() != "AdvancedNewFileCreation":
+        if view.name() != VIEW_NAME:
             return []
 
+        pac = PathAutocomplete
         if self.continue_previous_autocomplete():
             if DEBUG:
                 print "AdvancedNewFile[Debug]: (Prev) Suggestions"
-                print PathAutocomplete.prev_suggestions
+                print pac.prev_suggestions
 
-            return PathAutocomplete.prev_suggestions
+            return pac.prev_suggestions
 
         suggestions = []
         suggestions_w_spaces = []
-        root_path = PathAutocomplete.root + os.sep
-        directory, base = os.path.split(PathAutocomplete.path)
+        root_path = pac.root + os.sep
+        directory, base = os.path.split(pac.path)
 
-        if directory == "" and PathAutocomplete.default_root:
+        if directory == "" and pac.default_root:
             # Project folders
             sugg, sugg_w_spaces = self.generate_project_auto_complete(base)
             suggestions += sugg
@@ -278,10 +315,10 @@ class PathAutocomplete(sublime_plugin.EventListener):
                 suggestions.append((" " + temp, name))
 
         # Previous used to determine cycling through entries.
-        PathAutocomplete.prev_directory = directory
-        PathAutocomplete.prev_base = base
-        PathAutocomplete.prev_suggestions = suggestions
-        PathAutocomplete.prev_root = root_path
+        pac.prev_directory = directory
+        pac.prev_base = base
+        pac.prev_suggestions = suggestions
+        pac.prev_root = root_path
 
         if DEBUG:
             print "AdvancedNewFile[Debug]: Suggestions:"
