@@ -1,1 +1,1 @@
-{"url": "https://github.com/skuroda/Sublime-AdvancedNewFile", "version": "2012.11.13.13.37.21", "description": "Sublime Advanced NewFile plugin"}
+{"url": "https://github.com/skuroda/Sublime-AdvancedNewFile", "version": "2012.11.21.05.11.53", "description": "File creation plugin for Sublime Text 2."}
