@@ -17,5 +17,6 @@
     "1.6.7": "messages/1.6.7.txt",
     "1.6.8": "messages/1.6.8.txt",
     "1.6.9": "messages/1.6.9.txt",
-    "1.6.9": "messages/1.6.10.txt"
+    "1.6.10": "messages/1.6.10.txt",
+    "1.6.11": "messages/1.6.11.txt"
 }
