@@ -1,0 +1,5 @@
+SublimeLinter 1.6.11 changelog
+
+CHANGES/FIXES
+
+- Github (nodeload) zip url scheme changed.
