@@ -1,1 +1,1 @@
-{"url": "http://github.com/SublimeLinter/SublimeLinter", "version": "1.6.10", "description": "Inline lint highlighting for the Sublime Text 2 editor"}
+{"url": "http://github.com/SublimeLinter/SublimeLinter", "version": "1.6.11", "description": "Inline lint highlighting for the Sublime Text 2 editor"}
